cpp from beginning

--- a/.crossnote/style.less
+++ b/.crossnote/style.less
@@ -40,7 +40,7 @@ pre[class*="language-"],
 pre[class*="language-"] code {
   color: #DCDCDC;
   background-color: #2e2e2e;
-  font-family: "Cascadia Code PL SemiLight", "汉仪玄宋", monospace;
+  font-family: "Cascadia Code PL SemiLight", "汉仪玄宋", "Noto Serif CJK SC", monospace;
 }
 pre[class*="language-"] .token.punctuation {
   color: #DCDCDC;
